--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   firebase_auth: ^0.18.1+2
+  firebase_core: ^0.5.0
+  cloud_firestore: ^0.14.0+2
+  modal_progress_hud: ^0.1.3
+  firebase_storage: ^4.0.1
 
 dev_dependencies:
   flutter_test:
