--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cloud_firestore: ^0.14.0+2
   modal_progress_hud: ^0.1.3
   firebase_storage: ^4.0.1
+  hexcolor: ^1.0.6
 
 dev_dependencies:
   flutter_test:
